Fix content vertical alignment

--- a/src/components/FloatingHelper/FloatingHelperContent/FloatingHelperContent.st.css
+++ b/src/components/FloatingHelper/FloatingHelperContent/FloatingHelperContent.st.css
@@ -3,7 +3,6 @@
 
   display: flex;
   flex-direction: row;
-  align-items: center;
 }
 
 .root:hasBody .title {
